--- a/data/projects.json
+++ b/data/projects.json
@@ -7,7 +7,8 @@
     "backend": "Headless WordPress + Gravity Forms",
     "api": "GraphQL",
     "frontend": "Vue 3",
-    "state": "live"
+    "state": "live",
+    "show": true
   },
   "nome-studio": {
     "project": "Nome Studio",
@@ -17,7 +18,8 @@
     "backend": "Strapi",
     "api": "GraphQL",
     "frontend": "Vue 3",
-    "state": "wip"
+    "state": "wip",
+    "show": true
   },
   "future-ensemble": {
     "project": "future ensemble",
@@ -26,7 +28,8 @@
     "year": "2023",
     "backend": "Decap CMS + Vite SSG",
     "frontend": "Vue 3",
-    "state": "live"
+    "state": "live",
+    "show": true
   },
   "pinacoteca-agnelli": {
     "project": "Pinacoteca Agnelli",
@@ -36,7 +39,8 @@
     "backend": "Headless WordPress",
     "api": "REST",
     "frontend": "Vue 2",
-    "state": "live"
+    "state": "live",
+    "show": true
   },
   "davide-busnelli": {
     "project": "Davide Busnelli",
@@ -45,7 +49,8 @@
     "year": "2023",
     "backend": "Decap CMS + Astro",
     "frontend": "Astro + Vue 3",
-    "state": "wip"
+    "state": "wip",
+    "show": true
   },
   "twentyfive-av": {
     "project": "25AV",
@@ -55,7 +60,8 @@
     "backend": "Headless WordPress",
     "api": "GraphQL",
     "frontend": "Vue 3",
-    "state": "live"
+    "state": "live",
+    "show": true
   },
   "fortuny": {
     "project": "Fortuny",
@@ -65,7 +71,8 @@
     "backend": "Craft CMS + Shopify",
     "api": "GraphQL",
     "frontend": "Nuxt 3",
-    "state": "live"
+    "state": "live",
+    "show": true
   },
   "capsule": {
     "project": "Capsule",
@@ -75,7 +82,8 @@
     "backend": "Shopify",
     "api": "GraphQL",
     "frontend": "Nuxt 2",
-    "state": "live"
+    "state": "live",
+    "show": true
   },
   "giga-stock": {
     "project": "Giga Stock",
@@ -85,7 +93,8 @@
     "backend": "Shopify",
     "api": "GraphQL",
     "frontend": "Nuxt 2",
-    "state": "live"
+    "state": "live",
+    "show": true
   },
   "prode": {
     "project": "Prode – Scientific Production in Design",
@@ -95,7 +104,8 @@
     "backend": "Headless WordPress",
     "api": "REST",
     "frontend": "Vue 2",
-    "state": "archived"
+    "state": "archived",
+    "show": true
   },
   "twentyfifty-plus": {
     "project": "2050+",
@@ -105,7 +115,8 @@
     "backend": "Headless WordPress",
     "api": "REST",
     "frontend": "Vue 2",
-    "state": "live"
+    "state": "live",
+    "show": true
   },
   "flavia-tschanz": {
     "project": "Flavia Tschanz",
@@ -115,7 +126,8 @@
     "backend": "Headless WordPress + WooCommerce",
     "api": "REST",
     "frontend": "Vue 2",
-    "state": "live"
+    "state": "live",
+    "show": true
   },
   "luca-venturelli": {
     "project": "Luca Venturelli",
@@ -124,7 +136,8 @@
     "year": "2022",
     "backend": "static",
     "frontend": "Nuxt 2",
-    "state": "live"
+    "state": "live",
+    "show": true
   },
   "at-kollektive": {
     "project": "At Kollective",
@@ -134,7 +147,8 @@
     "backend": "Headless WordPress",
     "api": "REST",
     "frontend": "Nuxt 2",
-    "state": "archived"
+    "state": "archived",
+    "show": false
   },
   "nmthree": {
     "project": "NM3",
@@ -144,7 +158,8 @@
     "backend": "Headless WordPress + WooCommerce",
     "api": "REST",
     "frontend": "Vue 2",
-    "state": "live"
+    "state": "live",
+    "show": true
   },
   "goliath-cnc": {
     "project": "Goliath CNC",
@@ -154,7 +169,8 @@
     "backend": "Headless WordPress + WooCommerce",
     "api": "REST",
     "frontend": "Vue 2",
-    "state": "live"
+    "state": "live",
+    "show": false
   },
   "albumarte": {
     "project": "AlbumArte",
@@ -163,7 +179,8 @@
     "year": "2022",
     "backend": "WordPress",
     "frontend": "custom WordPress theme",
-    "state": "live"
+    "state": "live",
+    "show": false
   },
   "palloncini-a-domicilio": {
     "project": "Palloncini a domicilio",
@@ -173,7 +190,8 @@
     "backend": "Headless WordPress + WooCommerce",
     "api": "REST",
     "frontend": "Vue 2",
-    "state": "live"
+    "state": "live",
+    "show": false
   },
   "frecc": {
     "project": "Frecc",
@@ -182,7 +200,8 @@
     "year": "2021",
     "backend": "static",
     "frontend": "HTML + CSS",
-    "state": "live"
+    "state": "live",
+    "show": false
   },
   "gua-farm": {
     "project": "Azienda Agricola Gua",
@@ -192,6 +211,6 @@
     "backend": "Headless WordPress + WooCommerce",
     "api": "REST",
     "frontend": "Vue 2",
-    "state": "live"
+    "state": "false"
   }
 }
